--- a/gilieye/header/header.html
+++ b/gilieye/header/header.html
@@ -4,20 +4,20 @@
 				<img src="../images/logo.gif" alt="" />
 			</a></div>
 			<ul class="header_list fl">
-				<li><a href="">画廊</a></li>
-				<li><a href="">企划</a></li>
-				<li><a href="">衍生</a></li>
-				<li><a href="">社团</a></li>
-				<li><a href="">约稿</a></li>
+				<li><a href="###">画廊</a></li>
+				<li><a href="###">企划</a></li>
+				<li><a href="###">衍生</a></li>
+				<li><a href="###">社团</a></li>
+				<li><a href="###">约稿</a></li>
 			</ul>
 			<div class="fl search">
 				<input type="text" name="" id="" value="" placeholder="搜索：少女前线" />
 				<div class="search_sprite"></div>
 			</div>
-			<div class="fl login_register">
-				<div  class="login fl" data-toggle="modal" data-target="#myModal">登陆</div>
+			<div class="fl header_login_register">
+				<div  class="header_login fl" data-toggle="modal" data-target="#myModal">登陆</div>
 				<!--<div class="register fl">注册</div>-->
-				<div  class="register fl" data-toggle="modal" data-target="#myModal">注册</div>
+				<div  class="header_register fl" data-toggle="modal" data-target="#myModal">注册</div>
 			</div>
 			<div class="publish">发布</div>
 			<!--<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
