--- a/gilieye/login_register/login_register.html
+++ b/gilieye/login_register/login_register.html
@@ -12,7 +12,7 @@
 	</head>
 	<body>
 		<div class="login_register">
-			<div class="login_register_tiltle">
+			<!--<div class="login_register_tiltle">
 				<div class="login_title lR_title color">登陆</div>
 				<div class="register_title lR_title">注册</div>
 				<div class="bottom_line"></div>
@@ -76,7 +76,7 @@
 					<img src="../images/tip.png" class="fl"/>
 					<p class="fl">请先同意协议</p>
 				</div>
-			</div>
+			</div>-->
 		</div>
 	</body>
 </html>
