--- a/gilieye/userCenter/userCenter.html
+++ b/gilieye/userCenter/userCenter.html
@@ -6,7 +6,31 @@
 		<link rel="stylesheet" type="text/css" href="../css/reset.css"/>
 		<link rel="stylesheet" type="text/css" href="../header/header.css"/>
 		<link rel="stylesheet" type="text/css" href="userCenter.css"/>
+		<script type="text/javascript" src="../js/cookie.js"></script>
+		<script type="text/javascript" src="../js/jquery-3.2.1.js"></script>
+		<script type="text/javascript" src="../header/header.js"></script>
+		<script type="text/javascript" src="userCenter.js"></script>
 	</head>
 	<body>
+		<div class="userCenter_top"></div>
+		<div class="userCenter_banner">
+			
+			<div class="userCenter_user_message"></div>
+		</div>
+		<div class="userCenter_title">
+			<div class="userCenter_title_wrap">
+				<div class="userCenter_title_RAM fl userCenter_color">动态</div>
+				<div class="userCenter_title_works fl">作品</div>
+				<div class="userCenter_title_attention fl">关注</div>
+				<p class="userCenter_bottom_line "></p>
+			</div>
+		</div>
+		<div class="userCenter_title_content">
+			<div class="userCenter_title_RAM_content userCenter_dis">动态</div>
+			<div class="userCenter_title_works_content">作品</div>
+			<div class="userCenter_title_attention__content">关注</div>
+		</div>
+		<div class="ceng"></div>
+		<div class="insert_content"></div>
 	</body>
 </html>
